# PMI_F_1_H_AiSD

./: .gitignore  CMakeLists.txt  README.md  test.c  test.cpp  Разбор задач по Алгоритмам и структурам данных.docx
AiSD/: lin_logsort.c
LiMP/:  count_string.c   finding_vasya.c  GREP.c  Lin_log_sort_2.c  bada.c  broker.c  fence.c  ideas.c  lanterns.c  max_int.c  mushroom_editor.c  point_the_corner.c
LiMP/BB/: factorial.c  fib_numb.c  random_int.c  three_numbers.c
LiMP/EXAM/: algoritm_evclid.c  distance.c  prime_numbers.c  random_substance.c
LiMP/Linear_sequence/: linear.cpp  linear_sequence.cpp  linear_sequence.h  main.c
Long_int/: convert.c  long_int.c  long_int.h  main.c
algoritm/: HOD.c  HOD.cpp  NewYear.c  Tricky_number.c  cap.c  chess.c  documents.c  eggs.c  factorial.c  glushchenko_pawns.c  guess_word.c  knitting_cube.c  labyrinth_1.c  labyrinth_2.c  povtor.c  progressia.c  prosto_podchet.c  summa.c  tree.c
algoritm/Long_int/: convert.c  long_int.c  long_int.h  main.c
algoritm/TrickyNumber/: Tricky_number.c  run_tricky.cpp  tricky.cpp
